feat: images on products and creation of f_precos_completa

--- a/pipeline-gold-to-app-db.ipynb
+++ b/pipeline-gold-to-app-db.ipynb
@@ -89,6 +89,7 @@
     "\n",
     "gold_tables = [\n",
     "    'f_precos',\n",
+    "    'f_precos_completa',\n",
     "    'd_empresas',\n",
     "    'd_produtos'\n",
     "]\n",
