--- a/pipeline-silver-collect-product-images.ipynb
+++ b/pipeline-silver-collect-product-images.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1eadb4b9-5829-495c-bd5e-71017c2c05ba",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3bf948c3-7408-461a-bfdc-703347d70a42",
      "showTitle": false,
@@ -54,6 +60,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "import re\n",
     "import requests\n",
     "\n",
     "from pathlib import Path\n",
@@ -72,7 +79,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "20f1a13c-4f33-4ecb-9d4e-b69bd55b5407",
      "showTitle": false,
@@ -134,7 +144,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "86e6aae0-5d9d-4cca-87e4-b22d1745c303",
      "showTitle": false,
@@ -145,31 +158,6 @@
    "source": [
     "\n",
     "## Helper functions\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "f0802196-e32f-4a2b-ba23-add5502084e4",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def get_google_creds():\n",
-    "    return {\n",
-    "        \"api_key\": dbutils.secrets.get(\"precos-pmc-gcs\", \"google_api_key\"),\n",
-    "        \"cx\": dbutils.secrets.get(\"precos-pmc-gcs\", \"google_cx\")\n",
-    "    }\n"
    ]
   },
   {
@@ -402,7 +390,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9820487c-4835-4e10-8ab5-1556789e4003",
      "showTitle": false,
@@ -526,7 +517,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "tz = get_tz()\n",
     "now = datetime.now(tz).strftime('%Y-%m-%d %H:%M:%S')\n",
     "\n",
@@ -549,12 +539,14 @@
     "    if not item.get('cd_produto'): \n",
     "        continue\n",
     "    \n",
+    "    pattern = \"[']\"\n",
+    "\n",
     "    item_sql = f\"\"\"\n",
     "        (\n",
     "            {item['cd_produto']}, \n",
     "            '{item['nm_url_thumbnail']}', \n",
-    "            '{item['nm_source_title']}', \n",
-    "            '{item['nm_source_name']}', \n",
+    "            '{re.sub(pattern, '', item['nm_source_title'])}', \n",
+    "            '{re.sub(pattern, '', item['nm_source_name'])}', \n",
     "            '{item['nm_source_link']}', \n",
     "            '{now}'\n",
     "        )\n",
