--- a/pipeline-silver-to-gold.ipynb
+++ b/pipeline-silver-to-gold.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1eadb4b9-5829-495c-bd5e-71017c2c05ba",
      "showTitle": false,
@@ -27,7 +30,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3bf948c3-7408-461a-bfdc-703347d70a42",
      "showTitle": false,
@@ -71,7 +77,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "20f1a13c-4f33-4ecb-9d4e-b69bd55b5407",
      "showTitle": false,
@@ -133,7 +142,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "86e6aae0-5d9d-4cca-87e4-b22d1745c303",
      "showTitle": false,
@@ -167,8 +179,12 @@
     "def write_gold_snapshot_star_schema_delta_table_on_s3(\n",
     "    spark,\n",
     "    df: DataFrame, \n",
-    "    table_name: str\n",
+    "    table_name: str,\n",
+    "    partitions: list = []\n",
     ") -> bool:\n",
+    "\n",
+    "    if not partitions:\n",
+    "        partitions = [\"dt_ultima_atualizacao\"]\n",
     "\n",
     "    if df.isEmpty():\n",
     "        print(f\"Nothing to insert in {table_name}\")\n",
@@ -178,29 +194,28 @@
     "\n",
     "    try:\n",
     "        \n",
+    "        # Drop old table\n",
+    "        if table_exists(spark, CATALOG, SCHEMA, table_name):\n",
+    "            drop_table = f\"DROP TABLE IF EXISTS {full_table_name}\"\n",
+    "            spark.sql(drop_table)\n",
+    "\n",
     "        # Create table\n",
-    "        if not table_exists(spark, CATALOG, SCHEMA, table_name):\n",
-    "            print(f\"Creating snapshot {full_table_name}\")\n",
-    "            (\n",
-    "                df\n",
-    "                .writeTo(full_table_name)\n",
-    "                .using(\"delta\")\n",
-    "                .partitionedBy(\"dt_ultima_atualizacao\")\n",
-    "                .create()\n",
-    "            )\n",
-    "    \n",
-    "        # Grants idempotency replaces\n",
-    "        else:\n",
+    "        print(f\"Creating snapshot {full_table_name}\")\n",
+    "        (\n",
+    "            df\n",
+    "            .writeTo(full_table_name)\n",
+    "            .using(\"delta\")\n",
+    "            .partitionedBy(*partitions)\n",
+    "            .create()\n",
+    "        )\n",
     "\n",
-    "            print(f\"Replacing snapshot in {full_table_name}\")\n",
-    "\n",
-    "            spark.sql(f\"DELETE FROM {full_table_name}\")        \n",
-    "            \n",
-    "            (\n",
-    "                df\n",
-    "                .writeTo(full_table_name)\n",
-    "                .append()\n",
-    "            )\n",
+    "        # Insert results\n",
+    "        print(f\"Filling snapshot in {full_table_name}\")\n",
+    "        (\n",
+    "            df\n",
+    "            .writeTo(full_table_name)\n",
+    "            .append()\n",
+    "        )\n",
     "\n",
     "        print(f'Sucessful inserted into {full_table_name}')\n",
     "        return True\n",
@@ -214,7 +229,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9820487c-4835-4e10-8ab5-1556789e4003",
      "showTitle": false,
@@ -251,6 +269,11 @@
     "sql_f_precos = read_sql_template(src_folder / 'silver_to_gold_f_precos.sql')\n",
     "df_f_precos = spark.sql(sql_f_precos)\n",
     "write_gold_snapshot_star_schema_delta_table_on_s3(spark, df=df_f_precos, table_name='f_precos')\n",
+    "\n",
+    "# Fact: precos completa\n",
+    "sql_f_precos_completa = read_sql_template(src_folder / 'silver_to_gold_f_precos_completa.sql')\n",
+    "df_f_precos_completa = spark.sql(sql_f_precos_completa)\n",
+    "write_gold_snapshot_star_schema_delta_table_on_s3(spark, df=df_f_precos_completa, table_name='f_precos_completa', partitions=['dt_referencia', 'nm_rede', 'nm_bairro'])\n",
     "\n",
     "# Dimension: produtos\n",
     "sql_d_produtos = read_sql_template(src_folder / 'silver_to_gold_d_produtos.sql')\n",
